2003-10-28  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/Makefile.am : Removed QSW_LIBS from pdsh binaries.

2003-10-27  Jim Garlick <garlick@llnl.gov>

	* src/qsnet/qswutil.c (qsw_decode_cap) : Changed format
	for cap->cap_elan_type/cap->cap_spare to %hx from %x. This
 	member is unsigned short.
 
2003-10-14  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, pdsh.spec.in: Do not install pdsh/pdcp with setuid
	bits on by default.

	* src/modules/mcmd.c, src/modules/mqcmd.c (rcmd_init): drop
	elevated permissions if they are set.

2003-10-13  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_mqshell.m4, config/ac_qshell.m4, config/ac_elan.m4:
	Abstract Elan tests into AC_ELAN macro. Test for either libelanctrl
	or libelan3.

	* src/qsnet/qswutil.c: Integrate patch from Quadrics to support
 	new QSW elanctrl interface.
	
2003-10-12  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qshell.c (getpwnam_common): return copy of passwd
	struct alloc'd on heap instead of return value from getpwnam.

	* src/common/hostlist.c: update to latest hostlist code from
	LSD-Tools project.
 
2003-10-02  Albert Chu <chu11@llnl.gov>

	* src/pdsh/opt.h: Increased MAX_USERNAME from 9 to 17.

	* src/pdsh/opt.c (opt_default, opt_args): Null terminate
	luser or ruser username strings in case overflow occurred.

2003-09-26  Albert Chu <chu11@llnl.gov>

	* src/modules/mcmd.c (mcmd): Changed size_t to socklen_t for 'len'
	variable to avoid compiler warnings.

	* src/modules/mcmd.c: Upped protocol version number to 2.0.

2003-09-19  Albert Chu <chu11@llnl.gov>

	* pdsh.spec.in: Removed dependency of mrshd package from
	pdsh-rcmd-mrsh.

2003-09-18  Albert Chu <chu11@llnl.gov>

	* doc/pdsh.1.in, doc/pdcp.1.in: 
	Replaced @PROJECT@ with @PACKAGE@, so that manpages will be
	output properly by configure.

	* src/qsnet/mqshd.c (check_interfaces): 
	Fixed a memory leak. 

2003-09-17  Albert Chu <chu11@llnl.gov>

	* src/pdsh/dsh.c (dsh): 